// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mqs/react-server-components components <InputRange /> renders 1`] = `
<DocumentFragment>
  <input
    class="range range-primary range-md test"
    data-testid="InputRange"
    max="100"
    min="0"
    type="range"
  />
</DocumentFragment>
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputRange Input Range Color Example 1`] = `
[
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        accent
      </span>
    </label>
    <input
      className="range range-accent range-md"
      data-testid="InputRange"
      max={100}
      min={0}
      type="range"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        error
      </span>
    </label>
    <input
      className="range range-error range-md"
      data-testid="InputRange"
      max={100}
      min={0}
      type="range"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        info
      </span>
    </label>
    <input
      className="range range-info range-md"
      data-testid="InputRange"
      max={100}
      min={0}
      type="range"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        primary
      </span>
    </label>
    <input
      className="range range-primary range-md"
      data-testid="InputRange"
      max={100}
      min={0}
      type="range"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        secondary
      </span>
    </label>
    <input
      className="range range-secondary range-md"
      data-testid="InputRange"
      max={100}
      min={0}
      type="range"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        success
      </span>
    </label>
    <input
      className="range range-success range-md"
      data-testid="InputRange"
      max={100}
      min={0}
      type="range"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        warning
      </span>
    </label>
    <input
      className="range range-warning range-md"
      data-testid="InputRange"
      max={100}
      min={0}
      type="range"
    />
  </div>,
]
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputRange Input Range Example 1`] = `
<input
  className="range range-primary range-md"
  data-testid="InputRange"
  max={100}
  min={0}
  type="range"
/>
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputRange Input Range Size Example 1`] = `
[
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        lg
      </span>
    </label>
    <input
      className="range range-primary range-lg"
      data-testid="InputRange"
      max={100}
      min={0}
      type="range"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        md
      </span>
    </label>
    <input
      className="range range-primary range-md"
      data-testid="InputRange"
      max={100}
      min={0}
      type="range"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        sm
      </span>
    </label>
    <input
      className="range range-primary range-sm"
      data-testid="InputRange"
      max={100}
      min={0}
      type="range"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        xs
      </span>
    </label>
    <input
      className="range range-primary range-xs"
      data-testid="InputRange"
      max={100}
      min={0}
      type="range"
    />
  </div>,
]
`;
